part7/wordpress-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  labels:
    app: wordpress-app   
spec:
  selector:
    matchLabels:
      app: wordpress-app
  template:
    metadata:
      labels:
        app: wordpress-app
    spec:
      containers:
      - name: wordpress-app
        imagePullPolicy: Always
        image: wordpress:6.3.1-apache
        ports:
        - containerPort: 80
          name: wordpress-port
